--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,7 @@
     -->
     <title>React App</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200;400;500;700&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200;300;400;500;700&display=swap" rel="stylesheet"> 
   </head>
   <body>
     <div id="root"></div>
