edit back ground and edit book

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Philosopher:wght@700&display=swap" rel="stylesheet">
 
   </head>
-  <body>
-    <div id="root"></div>
+  <body style="margin:0px;">
+    <div id="root" ></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
